<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CC NFC Pwner</string>
    <string name="title_activity_info">About</string>
    <string name="action_about">About</string>
    <!-- Credit card data -->
    <string name="card_number">Card number:</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="holder_name">Holder name:</string>
    <string name="card_aid">Card Aid:</string>
    <string name="application_label">Application:</string>
    <string name="pin_try">Pin trys left:</string>
    <string name="card_type">Card type:</string>
    <string name="savetofile">Save to file</string>
    <string name="saved">Saved</string>
    <!-- Info -->
    <string name="info">Put your Credit Card in the back of the phone</string>
    <string name="about">CC NFC Pwner was made to read public data on contactless credit cards compliants with EMV norm, using the library EMV NFC Paycard Enrollment.\n\nSource code of this app is available on Github: <a href="https://github.com/kr0no/CCNFCPwner/">https://github.com/kr0no/CCNFCPwner/</a>\n\nFor any questions or suggestions, you can find me at:\nkr0no@ka0labs.net</string>
    <!-- NFC dialog -->
    <string name="nfcdialog_title">Enable NFC</string>
    <string name="nfcdialog_message">For retrieve data from the credit card you must have enabled NFC. Open settings to enable it?</string>

    <string name="toast_saved">Saved to sdcard/CCNFCPwner/Cards.txt</string>
</resources>
